refactor(api): simplify shopping list stream collection
Replace explicit Collectors.toList() with Stream.toList() for
shopping list mapping to reduce verbosity and use the JDK convenience
method. No functional behavior changes; code readability and modern
API usage improved.